# lightsoff

./: Doxyfile  Makefile.in  README.md  build.sh  config.h  config.h.in  configure.ac  game.c  game.h  interface.c  interface.h  license.md  lightsoff.rc  logo.xpm  main.c
po/es/LC_MESSAGES/: lightsoff.po
po/fr/LC_MESSAGES/: lightsoff.po
